Add phpunit dependency (dev)

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
   "require": {
     "php": ">=7.0.0"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^6.0"
+  },
   "autoload": {
     "psr-4": {
       "Studiow\\ValueObject\\": "src",
