--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     }
   ],
   "require": {
-    "php": ">=7.0.0"
+    "php": ">=7.0.0",
+    "ramsey/uuid": "^3.6"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.0"
